--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "vite": "^4.4.9"
   },
   "dependencies": {
-    "@angular/common": "^16.2.6",
-    "@angular/compiler": "^16.2.6",
-    "@angular/core": "^16.2.6",
-    "@angular/platform-browser": "^16.2.6",
-    "@angular/router": "^16.2.6",
+    "@angular/common": "^16.2.7",
+    "@angular/compiler": "^16.2.7",
+    "@angular/core": "^16.2.7",
+    "@angular/platform-browser": "^16.2.7",
+    "@angular/platform-browser-dynamic": "^16.2.7",
+    "@angular/router": "^16.2.7",
     "rxjs": "^7.8.1",
-    "zone.js": "^0.14.0"
+    "zone.js": "~0.13.0"
   }
 }
